_sass/custom/style.scss
/*******************
* General
*******************/
span.ital {
  font-style: italic;
}
details {
  margin-bottom: $spacing-unit / 2;
}
img {
  display: block;
  margin: auto auto;
}
.pdf-link {
  width: 100%;
  height: 2em;
  text-align: right;
}

/*******************
* Site Menu
*******************/
.site-nav #dropdownMenuButton:hover {
  text-decoration: none;
  cursor: pointer;
}
.dropdown-menu .dropdown-item {
  width: initial !important;
  line-height: 2em;
}
.dropdown-menu .dropdown-item:visited, .dropdown-item:active {
  color: initial !important;
  background-color: initial !important;
}

/*******************
* Sidebar navigation
*******************/
.mobile-nav {
  position: relative;
  background-color: #fdfdfd;
  // border: 1px solid #e8e8e8;
  // border-radius: 5px;
  text-align: left;
  float: left;
  margin-top: 10px;
}
.mobile-nav label[for="nav-triggerSection"] {
  display: block;
  float: left;
  z-index: 2;
  cursor: pointer;
}
label .navbar-brand {
  vertical-align: text-top;
}
.mobile-nav .menu-icon {
  display: block;
  float: left;
  width: 36px;
  height: 26px;
  line-height: 0;
  padding-top: 10px;
  text-align: center;
}
.mobile-nav .menu-icon > svg {
  // fill: #424242;
}
.triggerSection {
  display: block;
}
.mobile-nav .nav-triggerSection {
  display: none;
}
.mobile-nav input ~ .triggerSection {
  clear: both;
  display: none;
}
.mobile-nav input:checked ~ .triggerSection {
  display: block;
  padding-bottom: 5px;
}
.mobile-nav .page-link {
  display: block;
  padding: 5px 10px;
  margin-right: 20px;
  margin-left: 0;
  color: #111;
  line-height: 1.5;
}

// old -----
.pagenav {
  width: 100%;
  padding-top: 75px;
}
.pagenav.right {
  margin-right: $spacing-unit * 3;
}
.pagenav nav {
  flex-direction: column;
}
.subsection {
  visibility: hidden;
  height: 0px;
}
#main-scrollspy {
  display: flex;
  flex-wrap: wrap;
}
.wrapper {
  position: relative;
  width: 85%;
  min-width: 500px;
}
.nav-area {
  margin-top: 100px;
  width: 15%;
  position: fixed;
  overflow-y: scroll;
  height: 510px;
}
.nav-area.right {
  overflow-y: initial;
}

.nav-area.section {
  margin-left: $spacing-unit * 2;
  min-width: 220px;
  max-width: 340px;
}
.right .nav-link {
  padding: 0.5rem;
}
.nav-area.right {
  margin-right: $spacing-unit * 3;
  right: 0;
}
// mobile version
.background.mobile {
  position: sticky;
  top: 0;
  background-color: white;
  z-index: 1;
  width: 100%;
  border-bottom: 1px solid #e8e8e8;
}
// TODO need to remove this for sites that don't have subsection headers
.background.mobile.bottom {
  position: sticky;
  bottom: 0;
  width: 100%;
  background-color: white;
  z-index: 1;
  border-top: 1px solid #e8e8e8;
}
.wrapper.mobile {
  width: initial;
}
.nav-area.mobile {
  width: 100%;
  margin: initial;
  min-width: initial;
  max-width: initial;
  position: relative;

  visibility: hidden;
  height: 0;
}
.mobile #nav-subsections .nav-link {
  padding: 0.5rem;
}
@media only screen and (min-width : 320px) and (max-width : 1280px) {
  .wrapper {
    width: 90%;
    min-width: initial;
  }
  .nav-area {
    height: 75vh;
  }
  .nav-area.subsection.mobile {
    visibility: initial;
    height: initial;
  }
  .nav-area.right.widescreen {
    visibility: hidden;
    height: 0;
  }
  .pagenav.right nav {
    flex-direction: row;
  }
  .nav-area.section.mobile {
    visibility: initial;
    height: initial;
  }
  .nav-area.section.widescreen {
    visibility: hidden;
    height: 0;
  }
  .pagenav.section nav {
    flex-direction: row;
  }
}
.navbar-brand {
  font-family: 'Averia Libre', cursive;
  text-transform: uppercase;
}
#nav-subsections {
  max-height: 65vh;
}
// TODO not sure if belongs here or with site menu
nav {
  z-index: 3;
}

// TODO not sure where this is used
.linkToTop {
  margin-top: 50px;
}

/*******************
* Class page
*******************/
.classtile {
  width: 27%;
  height: $base-line-height * 2em;
  border-radius: .5em;

  margin-left: $spacing-unit / 2;
  margin-bottom: $spacing-unit / 2;
  padding: $spacing-unit / 2;

  // to center align text vertically...
  line-height: $base-line-height * 2em;
  // ... and horizontally
  text-align: center;

  background-color: $grey-color-light;
  position: relative;
  float: left;

  cursor: pointer;
}
.classtile:hover {
  background-color: $grey-color-hover;
}
// make the tile a link
.classLink {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;

  z-index: 1;
}

/*******************
* Headers and Titles
*******************/
.center-title {
  text-align: center;
}
.post-title {
  font-size: 28px;
  line-height: $base-line-height;
}
h1, h2:not(.post-list-heading), h3:not(.post-title), h4, h5 {
  //font-family: 'Syne Tactile', cursive;
  font-family: 'Averia Libre', cursive;
  text-transform: uppercase;
}
h3:not(.post-title) {
  margin-bottom: .5em;
  border-bottom-width: 1px;
  border-color: $grey-color;
  border-bottom-style: solid;
}
h4 {
  margin-bottom: 0em;
  //font-size: 16px; // default
  font-size: 18px;
}
h5 {
  margin-bottom: 0em;
  font-size: 14px;
}
h5 {
  margin-bottom: 0em;
  font-size: 16px;

  // underline
  // TODO where is this used? table headers shouldn't have underlines
  // maybe on Earthbender or Fighter pages
  margin-bottom: .5em;
  border-bottom-width: 1px;
  border-color: $grey-color;
  border-bottom-style: solid;
}
.subtitle { 
  font-size: 20px;
} 
// blockquote headers
blockquote h5 {
  font-size: 16px;
  text-transform: uppercase;
  font-family: 'Averia Libre', cursive;
}
blockquote h5, .formCard h5 {
  margin-bottom: initial; // remove underline
  border-bottom-width: 0px;
  border-bottom-style: initial;
}
// table headers
.tableHeader {
  font-size: 16px;
  text-transform: uppercase;
  font-family: 'Averia Libre', cursive;
  text-align: center;
}
// TODO what is this?
.default-header {
  font-family: $base-font-family !important;
  text-transform: initial !important;
  border: 0px !important;
}
.scrollTable {
  overflow-x: scroll;
  width: 100%;
}
.scrollTable table th, .scrollTable table td{
  padding: 10px 10px;
}

/*******************
* Blockquotes
*******************/
blockquote {
  font-style: normal;
  font-size: 16px;
  color: black;
  background-color: $info-yellow;
  letter-spacing: normal;
  margin-left: 1.5em;
  margin-right: 1.5em;
  padding: 15px;
}
blockquote.example {
  background-color: $grey-color-medium;
}

/*******************
* Form Cards
*******************/
.formCard p, .formCard h4 {
  margin-bottom: 5px;
}
.formCard h5 {
  margin-top: 5px;
}
.formCard {
  margin: 1em 1.5em;
  padding: 15px;
}
.formCard.air {
  background-color: $air-orange;
}
.formCard.earth {
  background-color: $earth-green;
}
.formCard.fire {
  background-color: $fire-red;
}
.formCard.water {
  background-color: $water-blue;
}
.formCard table th, .formCard table tr {
  background-color: transparent;
}

/*******************
* Homepage banner
*******************/
.banner {
  text-align: center;
  padding-top: 3em;
  padding-bottom: 3em;
  margin-bottom: 1em;
  position: relative;
}
.banner-img {
  content: ' ';
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  opacity: 0.3;

  background-image: url("Banner.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
// mobile version
@media only screen and (min-width : 320px) and (max-width : 480px) {
  .banner-img {
    content: ' ';
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    opacity: 0.3;

    background: url("Banner_mobile.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
  }
}
.banner h1 {
  font-size: 64px;
}
.banner h1, .banner p, .banner a {
  position: relative;
  z-index: 2;
}
.banner .button {
  background-color: $brand-color;
  border: none;
  color: white;
  padding: 15px 20px;
  margin: 0px 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  border-radius: .5em;
}

/************************
* Homebrew content tags
* (new/change)
*************************/
.new::after {
  content: "new";
  color: white;

  font-size: 12px;
  font-family: $base-font-family;
  text-transform: lowercase;
  vertical-align: middle;
  margin-left: .5em;

  border-radius: .5em;
  padding: 1px 10px;
  text-align: center;
  background-color: $brand-color;
}
.change::after {
  content: "change";
  color: black;

  font-size: 12px;
  font-family: $base-font-family;
  text-transform: lowercase;
  vertical-align: middle;
  margin-left: .5em;

  border-radius: .5em;
  padding: 1px 10px;
  text-align: center;
  background-color: orange;
}

/*******************
* Footer
*******************/
footer {
  z-index: 10;
  background-color: white;
}
.footer-col-3 {
  text-align: right;
}
.footer-col-1 li {
  padding-bottom: .5em;
}
footer i, footer .username {
  color: $grey-color;
}
footer i {
  padding-right: 5px;
}

